--- a/TowerProject/mainwindow.ui
+++ b/TowerProject/mainwindow.ui
@@ -27,6 +27,7 @@
     <property name="title">
      <string>Tower Animator</string>
     </property>
+    <addaction name="actionExit"/>
    </widget>
    <addaction name="menuTower_Animator"/>
   </widget>
@@ -39,6 +40,11 @@
    </attribute>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionExit">
+   <property name="text">
+    <string>Exit</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources/>
