--- a/TowerLights2/mainwindow.ui
+++ b/TowerLights2/mainwindow.ui
@@ -6,20 +6,112 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>772</width>
-    <height>462</height>
+    <width>1207</width>
+    <height>693</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
-  <widget class="QWidget" name="centralWidget"/>
+  <widget class="QWidget" name="centralWidget">
+   <widget class="QQuickWidget" name="TowerGrid">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>355</width>
+      <height>595</height>
+     </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>355</width>
+      <height>595</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>355</width>
+      <height>595</height>
+     </size>
+    </property>
+    <property name="resizeMode">
+     <enum>QQuickWidget::SizeRootObjectToView</enum>
+    </property>
+    <property name="source">
+     <url>
+      <string>file:///C:/Users/Matthew/Dropbox/cs480/Project/Tower-iLLuminati/TowerLights2/TowerGrid.qml</string>
+     </url>
+    </property>
+   </widget>
+   <widget class="QWidget" name="formLayoutWidget">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>0</y>
+      <width>821</width>
+      <height>631</height>
+     </rect>
+    </property>
+    <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
+     <item row="0" column="1">
+      <widget class="QDockWidget" name="dockWidget_2">
+       <property name="minimumSize">
+        <size>
+         <width>200</width>
+         <height>225</height>
+        </size>
+       </property>
+       <property name="maximumSize">
+        <size>
+         <width>200</width>
+         <height>225</height>
+        </size>
+       </property>
+       <property name="floating">
+        <bool>false</bool>
+       </property>
+       <property name="windowTitle">
+        <string>Color Wheel</string>
+       </property>
+       <widget class="QWidget" name="dockWidgetContents_2">
+        <widget class="QWidget" name="colorWheelWidget" native="true">
+         <property name="geometry">
+          <rect>
+           <x>0</x>
+           <y>0</y>
+           <width>200</width>
+           <height>200</height>
+          </rect>
+         </property>
+         <property name="maximumSize">
+          <size>
+           <width>200</width>
+           <height>200</height>
+          </size>
+         </property>
+        </widget>
+       </widget>
+      </widget>
+     </item>
+    </layout>
+   </widget>
+  </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>772</width>
+     <width>1207</width>
      <height>21</height>
     </rect>
    </property>
@@ -340,6 +432,13 @@
   </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QQuickWidget</class>
+   <extends>QWidget</extends>
+   <header>QQuickWidget</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
